--- a/pages/sv/sv4.html
+++ b/pages/sv/sv4.html
@@ -225,11 +225,16 @@
                         const cardName = card.name;
                         const formatedCardName = cardName.replace(/ /g, '_').replace(/[()]/g, '').replace(/'/g, '').replace(/\./g, '');
 
+                        const cardId = card.id;
+                        const cardSetId = card.set.id;
+                        const cardImgUrl = "https://images.pokemontcg.io";
+                        const cardImgHiResUrl = `${cardImgUrl}/${cardSetId}/${originalNumber}_hires.png`;
+
                         const cardElement = document.createElement('div');
                         cardElement.setAttribute('class', `col-6 col-md-3 ${card.name} card-container mb-4`);
                         cardElement.innerHTML = `
                             <div class="card">
-                                <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${formatedCardName}Modal" loading="lazy">
+                                <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${cardId}Modal" loading="lazy">
                                 
                                 <div class="container">
                                     <div class="row card-info">
@@ -246,10 +251,10 @@
                         container.appendChild(cardElement);
 
                         const modalElement = document.createElement('div');
-                        modalElement.setAttribute('class',`modalContainer-${formatedCardName} modal fade`);
-                        modalElement.setAttribute('id',`${formatedCardName}Modal`);
+                        modalElement.setAttribute('class',`modalContainer-${cardId} modal fade ${formatedCardName}Modal`);
+                        modalElement.setAttribute('id',`${cardId}Modal`);
                         modalElement.setAttribute('tabIndex','-1');
-                        modalElement.setAttribute('aria-labelledby',`${formatedCardName}ModalLabel`);
+                        modalElement.setAttribute('aria-labelledby',`${cardId}ModalLabel`);
                         modalElement.setAttribute('aria-hidden','true');
                         modalElement.innerHTML = `
                                 <div class="modal-dialog modal-xl">
