--- a/pages/sv/sv1.html
+++ b/pages/sv/sv1.html
@@ -3,11 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>PoClayMon Set Tracking</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon" sizes="196x196" href="lib/imgs/icon.png">
+        <link rel="shortcut icon" sizes="196x196" href="lib/imgs/icon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e56c958c32.js" crossorigin="anonymous"></script>
         <link href="../../lib/css/global.css" rel="stylesheet">
     </head>
@@ -19,20 +26,20 @@
                 </a>
             </div>
         </header>
-        <main class="container mt-4">
+        <main class="container mt-4 p-4">
+            <div class="row mb-4 set-info"> 
+                <div class="col-12 col-sm-8">
+                    <img class="img-fluid" src="../../lib/imgs/set-logos/SV.png">
+                </div>
+                <div class="col-12 col-sm-4 align-self-center">
+                    <div id="setInfo">
+                        <!-- Auto Populated -->
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col card-list">
                     <div class="container gx-1">
-                        <div class="row g-4 mb-4"> 
-                            <div class="col-12 col-sm-7">
-                                <img class="img-fluid" src="../../lib/imgs/set-logos/SV.png">
-                            </div>
-                            <div class="col-12 col-sm-5 align-self-center">
-                                <div id="setInfo">
-                                    <!-- Auto Populated -->
-                                </div>
-                            </div>
-                        </div>
                         <div class="row g-3" id="setCards">
                             <!-- Auto Populated -->
                         </div>
@@ -238,14 +245,21 @@
                             <div class="card">
                                 <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${cardId}Modal" loading="lazy">
                                 
-                                <div class="container">
+                                <div class="container card-details">
                                     <div class="row card-info">
-                                        <div class="col-7 col-sm-9 text-start p-0 card-details">
+                                        <div class="col-12 col-sm-8 pe-sm-0 text-center text-sm-start">
                                             <p class="card-name">${card.name}</p>
+                                        </div>
+                                        <div class="col-12 col-sm-4 ps-sm-0 text-center text-sm-end align-items-end">
+                                            <p class="card-price">$${card.cardmarket.prices.averageSellPrice}</p>
+                                        </div>
+                                    </div>
+                                    <div class="row card-info">
+                                        <div class="col-sm-3 d-none d-sm-block pe-0 text-start">
                                             <p class="card-number">#${formattedNumber}</p>
                                         </div>
-                                        <div class="col-5 col-sm-3 text-end align-items-end p-0 pricing">
-                                            <p class="card-price">$${card.cardmarket.prices.averageSellPrice}</p>
+                                        <div class="col-sm-9 d-none d-sm-block ps-0 text-end align-items-end">
+                                            <p class="card-rarity">${card.rarity}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -261,31 +275,28 @@
                         modalElement.innerHTML = `
                                 <div class="modal-dialog modal-xl">
                                     <div class="modal-content">
-                                        <div class="modal-header pb-0">
-                                            <div class="modal-close container d-flex justify-content-end" data-bs-dismiss="modal" aria-label="Close">
-                                                <span type="button" class="fa fa-xmark"></span>  
+                                        <div class="modal-header container d-flex align-items-center justify-content-end pb-0">
+                                            <div class="row">
+                                                <div class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+                                                    <span type="button" class="fa fa-xmark"></span>  
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="modal-body">
                                             <div class="container">
                                                 <div class="row">
-                                                    <div class="col-5">
+                                                    <div class="col-12 col-md-5">
                                                         <img src="${card.images.large}" alt="${card.name}" loading="lazy">
                                                     </div>
-                                                    <div class="col-7">
-                                                        <div class="row">
-                                                            <div class="container">
-                                                                <div class="row">
-                                                                    <div class="col-6">
-                                                                        <p class="h1 modal-title fs-2" id="${formatedCardName}ModalLabel">${card.name}</p>
-                                                                    </div>
-                                                                    <div class="col-6 container d-flex justify-content-end ${card.hp ? '' : 'd-none'}">
-                                                                        <p class="h5">${card.hp}HP</p>
-                                                                    </div>
+                                                    <div class="col-12 col-md-7">
+                                                        <div class="container">
+                                                            <div class="row">
+                                                                <div class="col-6">
+                                                                    <p class="h1 modal-title fs-2" id="${formatedCardName}ModalLabel">${card.name}</p>
                                                                 </div>
-                                                                <p class="modal-card-number">#${formattedNumber}</p>
-                                                                <p class="modal-card-artist"><span class="fa fa-palette pe-2"></span>${card.artist}</p>
                                                             </div>
+                                                            <p class="modal-card-number">#${formattedNumber}</p>
+                                                            <p class="modal-card-artist"><span class="fa fa-palette pe-2"></span>${card.artist}</p>
                                                         </div>
                                                     </div>
                                                 </div>
