--- a/pages/sv/sv1.html
+++ b/pages/sv/sv1.html
@@ -40,6 +40,11 @@
             <div class="row">
                 <div class="col card-list" id="cardList">
                     <div class="container gx-1">
+                        <div class="row">
+                            <div id="loading">
+                                <img class="d-block mx-auto" width="100%" src="../../lib/imgs/loading.png" alt="Your Cards are Loading">
+                            </div>
+                        </div>
                         <div class="row g-3" id="setCards">
                             <!-- Auto Populated -->
                         </div>
@@ -240,7 +245,7 @@
                         const cardImgHiResUrl = `${cardImgUrl}/${cardSetId}/${originalNumber}_hires.png`;
 
                         const cardElement = document.createElement('div');
-                        cardElement.setAttribute('class', `col-4 col-md-2 ${card.name} card-container mb-4`);
+                        cardElement.setAttribute('class', `col-4 col-md-3 ${card.name} card-container mb-4`);
                         cardElement.innerHTML = `
                             <div class="card">
                                 <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${cardId}Modal" loading="lazy">
@@ -309,16 +314,22 @@
                 }
                 fetchAndDisplaySetCards();
 
+                setTimeout(function() {
+                    document.getElementById('loading').remove();
+                }, 10000);
+
                 window.addEventListener('scroll', function() {
                     var header = document.getElementById('mainHeader');
                     var targetDiv = document.getElementById('cardList');
 
                     var targetDivTop = targetDiv.getBoundingClientRect().top;
-
-                    if (targetDivTop <= 0) {
-                        header.classList.add('sticky');
-                    } else {
-                        header.classList.remove('sticky');
+                    
+                    if (window.innerWidth <= 767){
+                        if (targetDivTop <= 0) {
+                            header.classList.add('sticky');
+                        } else {
+                            header.classList.remove('sticky');
+                        }
                     }
                 });
             </script>
